@@ -1,6 +1,7 @@
 //example from https://docs.openrewrite.org/running-recipes/popular-recipe-guides/migrate-to-java-17
 package com.amazonaws.samples.appconfig.utils;
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 
 public class MathNewCode {
     Boolean bool = Boolean.valueOf(false);
@@ -11,17 +12,17 @@ public class MathNewCode {
     Long l = new Long(1);
     Short sh = new Short("12");
     short s3 = 3;
-    Short sh3 = new Short(s3);
-    Integer i = new Integer(1);
+    Short sh3 = Short.valueOf(s3);
+    Integer i = Integer.valueOf(1);
 
     public void divide() {
         BigDecimal bd = BigDecimal.valueOf(10);
         BigDecimal bd2 = BigDecimal.valueOf(2);
-        bd.divide(bd2, BigDecimal.ROUND_DOWN);
-        bd.divide(bd2, 1);
-        bd.divide(bd2, 1, BigDecimal.ROUND_CEILING);
-        bd.divide(bd2, 1, 1);
-        bd.setScale(2, 1);
+        bd.divide(bd2, RoundingMode.DOWN);
+        bd.divide(bd2, RoundingMode.DOWN);
+        bd.divide(bd2, 1, RoundingMode.CEILING);
+        bd.divide(bd2, 1, RoundingMode.DOWN);
+        bd.setScale(2, RoundingMode.DOWN);
     }
 
    }
